--- a/public/ixn/activities/generic/index.html
+++ b/public/ixn/activities/generic/index.html
@@ -12,8 +12,8 @@
 </head>
 <body class="container">
 	<div id="step1" class="step">
-		<div class="col-xs-6">
-            <h3>Generic Activity</h3>
+		<div class="col-lg-12" style="margin-top: 20px;">
+            <center><img src="./images/sf-logo.png" width="250"></center>
         </div>
 	</div>			
 </body>
