--- a/public/ixn/activities/generic/index.html
+++ b/public/ixn/activities/generic/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>Generic</title>
-	<script data-main="js/main.js" src="js/require.js"></script>
-
-	<!--Styles-->
-	<link rel="stylesheet" type="text/css" href="css/styles.css" />
-	 <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css" rel="stylesheet" integrity="sha384-2mX2PSpkRSXLQzmNzH3gwK6srb06+OfbDlYjbog8LQuALYJjuQ3+Yzy2JIWNV9rW" crossorigin="anonymous">
+    <title>Publish to the Feed</title>
+    <script data-main="js/main.js" src="js/require.js"></script>
+    <!--Styles-->
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css" rel="stylesheet" integrity="sha384-2mX2PSpkRSXLQzmNzH3gwK6srb06+OfbDlYjbog8LQuALYJjuQ3+Yzy2JIWNV9rW" crossorigin="anonymous">
 </head>
+
 <body class="container">
-	<div id="step1" class="step">
-		<div class="col-lg-12" style="margin-top: 20px;">
-            <center><img src="./images/sf-logo.png" width="250"></center>
+    <div id="step1" class="step">
+        <div class="col-xs-6">
+            <h3>Publish to the Feed</h3>
+            <div class="well">
+                <fieldset>
+                    <legend>Feed Entry</legend>
+                    <div class="form-group">
+                        <label for="feedMessage" class="col-lg-2 control-label">Content</label>
+                        <div class="col-lg-10">
+                            <textarea class="form-control" rows="3" id="feedMessage"></textarea>
+                            <span class="help-block">Provide either text or HTML content to be pushed to feed.</span>
+                            <!--<p><small id="version"></small></p>-->
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
         </div>
-	</div>			
+        <div class="col-xs-4">
+            <div class="textpanel">
+                <img src="images/feed-screen.png">
+                <span id="texter"></span>
+            </div>
+        </div>
+    </div>
+    <div id="step2" class="step">
+        <div class="col-xs-8">
+            <h3>Please review your settings.</h3>
+            <div class="well">
+                <fieldset>
+                    <legend>Feed Content</legend>
+                    <div class="form-group">
+                        <div class="col-lg-10" id="showMessage">
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
