--- a/public/ixn/activities/generic/index.html
+++ b/public/ixn/activities/generic/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div id="step2" class="step">
+    <div id="step2" class="step" style="display:none;">
         <div class="col-xs-8">
             <h3>Please review your settings.</h3>
             <div class="well">
